Fix communications link

--- a/pages/index.html
+++ b/pages/index.html
@@ -123,7 +123,7 @@
                                 <p>Guides for users, developers, and administrators</p>
                             </article>
                         </a>
-                        <a href="communication.html#mailing-lists">
+                        <a href="/communication/#mailing-lists">
                             <article class="mailing-list">
                                 <h3>Mailing Lists</h3>
                                 <p>Discussion groups for users and developers</p>
