Fixed link to IRC

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                 <p>Frequently Asked Questions about GeoNode</p>
                             </article>
                         </a>
-                        <a href="communication.html#irc">
+                        <a href="communication/#irc">
                             <article class="irc">
                                 <h3>IRC</h3>
                                 <p>Real-time discussion and help at #geonode on freenode.net</p>
