Fixed link in IRC

--- a/pages/communication/index.html
+++ b/pages/communication/index.html
@@ -22,7 +22,7 @@
 							</ul>
                         </article>
 
-                        <article class="article2">
+                        <article id="mailing-lists" class="article2">
                             <h5>Developer Mailing Lists</h5>
 							<p>This is where all active development of GeoNode takes place. If you’re knee deep in the code it’s the place to email. Traffic can be high, as we try to make most all conversations public so people know what’s going on.</p>
 							<ul>
@@ -31,7 +31,7 @@
 							</ul>
                         </article>
 
-                        <article class="article2">
+                        <article id="irc" class="article2">
                             <h5>IRC</h5>
 							<p>The GeoNode community is available on IRC for interactive question and answer.  You can often find active developers, helpful users, and all manner of activity. It can be a useful way to find a quick answer or interact on a problem.</p>
 
