--- a/admin_features.html
+++ b/admin_features.html
@@ -113,7 +113,7 @@
                             <h4>Essential components for deploying OGC-compliant services</h4>
                             <div>
                                 <p>GeoNode includes the essential building blocks that an agency needs to deploy an OGC-compliant spatial data infrastructure (SDI). Having GeoServer as a foundation enables you to publish data from a wide variety of spatial data sources using open protocols from the OGC such as Web Map Service (WMS) and Web Feature Service (WFS).</p>
-                                <p>GeoNode's metadata and catalog system also enables publishing metadata in a variety of standards (ISO, FGDC, NASA DIF, Dublin Core). The catalog implementation, pycsw, is certified OGC-compliant and a Catalog Service for Web (CSW) reference implementation.
+                                <p>GeoNode's metadata and cataloguing system also enables publishing metadata in a variety of standards (ISO, FGDC, NASA DIF, Dublin Core). The catalogue implementation, pycsw, is certified OGC-compliant and a Catalog Service for Web (CSW) reference implementation.
                                 </p>
                             <ul class="unstyled">
                                 <li>Web Map Service (WMS)</li>
@@ -136,9 +136,9 @@
                     <div class="span7 number two">
                         <div class="highlighted-box">
                             <h2>Metadata</strong></h2>
-                            <h4>Authoring and management</h4>
+                            <h4>Authoring and Management</h4>
                             <div>
-                                <p>GeoNode provides a complete metadata catalog solution. Users and administrators can use GeoNode's metadata editor or upload an existing metadata document. If no separate document is available, default metadata is harvested from existing information. Records are editable and accessible via search or a variety of standards-based catalog interfaces via pycsw (OGC CSW, SRU, OpenSearch). Users can also access metadata in a variety of standard formats (ISO, FGDC, NASA DIF, Dublin Core).</br>
+                                <p>GeoNode provides a complete metadata catalogue solution. Users and administrators can use GeoNode's metadata editor or upload an existing metadata document. If no separate document is available, default metadata is harvested from existing information. Records are editable and accessible via search or a variety of standards-based catalogue interfaces via pycsw (OGC CSW, SRU, OpenSearch). Users can also access metadata in a variety of standard formats (ISO, FGDC, NASA DIF, Dublin Core).</br>
                                 </p>
                             <ul class="unstyled">
                                 <li>Upload</li>
