--- a/dev_features.html
+++ b/dev_features.html
@@ -111,14 +111,14 @@
                             <h2>Open Source Geospatial</strong></h2>
                             <h4>Open from top to bottom</h4>
 							<div>
-							<p>GeoNode is built upon a platform of proven open source components including Django, GeoServer, pycsw, OpenLayers and GeoExt. GeoNode implements many Open Geospatial Consortium (OGC) standards, including Web Map Service (WMS), Web Feature Service (WFS), Web Coverage Service (WCS), KML, and Catalog Service for Web (CSW). GeoNode development also contributes to the underlying open source projects and software libraries.</p>
+							<p>GeoNode is built upon a platform of proven open source components including Django, GeoServer, pycsw, OpenLayers and GeoExt. GeoNode implements many Open Geospatial Consortium (OGC) standards, including Web Map Service (WMS), Web Feature Service (WFS), Web Coverage Service (WCS), KML, and Catalogue Service for Web (CSW). GeoNode development also contributes to the underlying open source projects and software libraries.</p>
 							<p>Features include: 
 							</p>
 							</div>
                             <ul class="unstyled">
                                 <li>PostGIS Spatial Databases</li>
                                 <li>GeoServer OGC Services</li>
-                                <li>pycsw CSW Metadata Catalog</li>
+                                <li>pycsw CSW Metadata Catalogue</li>
                                 <li>Geospatial Python libraries</li>
                                 <li>OpenLayers and GeoExt Web Mapping Libraries</li>
                             </ul>
