--- a/admin_features.html
+++ b/admin_features.html
@@ -105,7 +105,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" />
+                        <!--img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" /-->
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
@@ -160,7 +160,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" />
+                        <!--img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" /-->
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
@@ -212,7 +212,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" />
+                        <!--img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" /-->
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
