--- a/pages/admin_features.html
+++ b/pages/admin_features.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" />
+                        <!--img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" /-->
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
@@ -101,7 +101,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" />
+                        <!--img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" /-->
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
@@ -153,7 +153,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" />
+                        <!--img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" /-->
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
