--- a/dev_features.html
+++ b/dev_features.html
@@ -191,7 +191,7 @@
         <section class="feature-details feature4" id="apis">
             <div class="container">
                 <div class="row">
-                    <div class="span7 number two">
+                    <div class="span7 number four">
                         <div class="highlighted-box">
                             <h2>APIs<strong></h2>
                             <h4>Integrate easily</h4>
@@ -220,7 +220,7 @@
                     <div class="span5">
                         <!--img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" /-->
                     </div>
-                    <div class="span7 number three">
+                    <div class="span7 number five">
                         <div class="highlighted-box">
                             <h2>Interoperability</strong></h2>
                             <h4>Plays well with others</h4>
