--- a/gallery/index.html
+++ b/gallery/index.html
@@ -272,7 +272,7 @@
                                             GeoNode platform. GeoNode is an open source platform for sharing
                                             geospatial data and maps.
 
-                                            Find it online: <a href= "yemen.rcdrrdri.org">VirtualKenya.org</a>
+                                            Find it online: <a href="http://yemen.rcdrrdri.org">VirtualKenya.org</a>
                                         </p>
                                     </div>
                             </div>
