--- a/pages/admin_features.html
+++ b/pages/admin_features.html
@@ -126,7 +126,7 @@
         <section class="feature-details feature4" id="scale">
             <div class="container">
                 <div class="row">
-                    <div class="span7 number two">
+                    <div class="span7 number four">
                         <div class="highlighted-box">
                             <h2>Scalability</strong></h2>
                             <h4>Designed for reliability under all load conditions</h4>
@@ -155,7 +155,7 @@
                     <div class="span5">
                         <!--img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" /-->
                     </div>
-                    <div class="span7 number three">
+                    <div class="span7 number five">
                         <div class="highlighted-box">
                             <h2>Administration Console</strong></h2>
                             <h4>Leverage the Django Administration Console</h4>
