Update with new icons

--- a/pages/admin_features.html
+++ b/pages/admin_features.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <!--img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" /-->
+                        <img src="static/img/noun_project_9760.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/globe.png" width="347" height="469" alt="Globe" class="feature-img" />
+                        <img src="static/img/noun_project_6119.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <!--img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" /-->
+                        <img src="static/img/noun_project_99.svg.png" width="250" height="250" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/globe.png" width="347" height="469" alt="Globe" class="feature-img" />
+                        <img src="static/img/noun_project_17896.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <!--img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" /-->
+                        <img src="static/img/noun_project_18273.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number five">
                         <div class="highlighted-box">
