--- a/user_features.html
+++ b/user_features.html
@@ -103,8 +103,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <!--img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" /-->
-                        <iframe src="http://www.screenr.com/embed/Wfn7" width="325" height="198" frameborder="0" class="feature-block"></iframe>
+                        <img src="static/img/noun_project_17976.svg.png" width="250" height="250" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
@@ -154,8 +153,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <!--img src="static/img/globe.png" width="347" height="469" alt="Globe" class="feature-img" /-->
-                        <iframe src="http://www.screenr.com/embed/0fn7" width="325" height="198" frameborder="0" class="feature-block"></iframe>
+                        <img src="static/img/noun_project_463.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -164,7 +162,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/gxp-OSM.jpg" width="468" height="277" alt="GeoExplorer" class="feature-block" />
+                        <img src="static/img/noun_project_1670.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
@@ -212,7 +210,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/globe.png" width="347" height="469" alt="Globe" class="feature-block" />
+                        <img src="static/img/noun_project_14947.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
