--- a/admin_features.html
+++ b/admin_features.html
@@ -105,7 +105,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <!--img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" /-->
+                        <img src="static/img/noun_project_9760.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/globe.png" width="347" height="469" alt="Globe" class="feature-img" />
+                        <img src="static/img/noun_project_6119.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -160,7 +160,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <!--img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" /-->
+                        <img src="static/img/noun_project_99.svg.png" width="250" height="250" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/globe.png" width="347" height="469" alt="Globe" class="feature-img" />
+                        <img src="static/img/noun_project_17896.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -212,7 +212,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <!--img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" /-->
+                        <img src="static/img/noun_project_18273.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number five">
                         <div class="highlighted-box">
