--- a/dev_features.html
+++ b/dev_features.html
@@ -104,7 +104,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <!--img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" /-->
+                        <img src="static/img/noun_project_8233.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/globe.png" width="347" height="469" alt="Globe" class="feature-img" />
+                        <img src="static/img/noun_project_2174.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -165,7 +165,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <!--img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" /-->
+                        <img src="static/img/noun_project_3064.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
@@ -209,7 +209,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/globe.png" width="347" height="469" alt="Globe" class="feature-img" />
+                        <img src="static/img/noun_project_18273.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -218,7 +218,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <!--img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" /-->
+                        <img src="static/img/noun_project_2549.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number five">
                         <div class="highlighted-box">
