fix extra close div in dev_features.html

--- a/dev_features.html
+++ b/dev_features.html
@@ -172,9 +172,7 @@
                             <h2>Bootstrap and jQuery</strong></h2>
                             <h4>Modern and flexible front-end</h4>
                             <p>GeoNode's front-end is based on the popular and flexible jQuery and Bootstrap frameworks. A set of jQuery JavaScript plugins is used to drive the user interface, and Bootstrap CSS is used to style the pages. Both of these frameworks make it easy to theme and customize your own GeoNode implementation if desired.</p>
-							<p>
-							Features include: 	
-							</p>
+							<p>Features include:</p>
                             <ul class="unstyled">
                                 <li>Bootstrap CSS framework</li>
                                 <li>jQuery JavaScript front-end and plugins</li>
