--- a/gallery/index.html
+++ b/gallery/index.html
@@ -102,7 +102,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href="http://geonode.ithacaweb.org"><img src="../static/img/cosa.png" width="325" height="189" alt="cosa" class="feature-img" /></a>
+                        <a href="http://geonode.ithacaweb.org"><img src="../static/img/cosa.png" width="325" height="189" alt="cosa" class="feature-img thumbnail" /></a>
                     </div>
                    	 <div class="span7 number one">
                        	      <div class="highlighted-box">
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <a href= "http://23.22.63.123"><img src="../static/img/masdap.png" width="325" height="189" alt="MASDAP" class="feature-img" /></a>
+                        <a href= "http://23.22.63.123"><img src="../static/img/masdap.png" width="325" height="189" alt="MASDAP" class="feature-img thumbnail" /></a>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href= "http://geonode.wfp.org"><img src="../static/img/wfp.png" width="325" height="189" alt="Iphone Geonode" class="feature-img" /></a>
+                        <a href= "http://geonode.wfp.org"><img src="../static/img/wfp.png" width="325" height="189" alt="Iphone Geonode" class="feature-img thumbnail" /></a>
                     </div>
                          <div class="span7 number three">
                              <div class="highlighted-box">
@@ -181,7 +181,7 @@
                             </div>
                         </div>
                          <div class="span5">
-                        <a href= "http://www.montagneaperte.it"><img src="../static/img/montagne.png" width="325" height="189" alt="montagneAperte" class="feature-img" /></a>
+                        <a href= "http://www.montagneaperte.it"><img src="../static/img/montagne.png" width="325" height="189" alt="montagneAperte" class="feature-img thumbnail" /></a>
                     </div>
                 </div>
             </div>
@@ -190,7 +190,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href= "http://cariska.mona.uwi.edu"><img src="../static/img/cariska.png" width="325" height="189" alt="cariska" class="feature-img" /></a>
+                        <a href= "http://cariska.mona.uwi.edu"><img src="../static/img/cariska.png" width="325" height="189" alt="cariska" class="feature-img thumbnail" /></a>
                     </div>
                          <div class="span7 number five">
                              <div class="highlighted-box">
@@ -225,7 +225,7 @@
                             </div>
                         </div>
                          <div class="span5">
-                        <a href= "http://www.montagneaperte.it"><img src="../static/img/kenya.png" width="325" height="189" alt="kenya" class="feature-img" /></a>
+                        <a href= "http://www.montagneaperte.it"><img src="../static/img/kenya.png" width="325" height="189" alt="kenya" class="feature-img thumbnail" /></a>
                     </div>
                 </div>
             </div>
@@ -234,7 +234,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href= "http://moz-adapt.org/"><img src="../static/img/moz.png" width="325" height="243" alt="moz" class="feature-img" /></a>
+                        <a href= "http://moz-adapt.org/"><img src="../static/img/moz.png" width="325" height="243" alt="moz" class="feature-img thumbnail" /></a>
                     </div>
                          <div class="span7 number seven">
                              <div class="highlighted-box">
@@ -278,7 +278,7 @@
                             </div>
                         </div>
                          <div class="span5">
-                        <a href= "yemen.rcdrrdri.org"><img src="../static/img/yemen.png" width="325" height="273" alt="yemen" class="feature-img" /></a>
+                        <a href= "yemen.rcdrrdri.org"><img src="../static/img/yemen.png" width="325" height="273" alt="yemen" class="feature-img thumbnail" /></a>
                     </div>
                 </div>
             </div>
@@ -287,7 +287,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href= "http://paris.sopac.org"><img src="../static/img/paris.png" width="325" height="262" alt="paris" class="feature-img" /></a>
+                        <a href= "http://paris.sopac.org"><img src="../static/img/paris.png" width="325" height="262" alt="paris" class="feature-img thumbnail" /></a>
                     </div>
                          <div class="span7 number nine">
                              <div class="highlighted-box">
@@ -331,7 +331,7 @@
                             </div>
                         </div>
                          <div class="span5">
-                        <a href= "http://haitidata.org"><img src="../static/img/haiti.png" width="325" height="222" alt="haitidata" class="feature-img" /></a>
+                        <a href= "http://haitidata.org"><img src="../static/img/haiti.png" width="325" height="222" alt="haitidata" class="feature-img thumbnail" /></a>
                     </div>
                 </div>
             </div>
@@ -340,12 +340,12 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href= "http://geonode.gov.vc"><img src="../static/img/vincent.png" width="325" height="178" alt="vincent" class="feature-img" /></a>
+                        <a href= "http://geonode.gov.vc"><img src="../static/img/vincent.png" width="325" height="178" alt="vincent" class="feature-img thumbnail" /></a>
                     </div>
                          <div class="span7 number eleven">
                              <div class="highlighted-box">
                                 <h2>St. Vincent Geonode</strong></h2>
-                                <h4></h4>
+                                <h4>&nbsp</h4>
                                     <div>
                                         <p>Various ministries of the St. Vincent Government are using GeoNode to push of proprietary software. This software will eventually replace the proprietary ones that are currently use.
 
@@ -363,7 +363,7 @@
                          <div class="span7 number twelve">
                              <div class="highlighted-box">
                                 <h2>Golfgis.com</strong></h2>
-                                <h4></h4>
+                                <h4>&nbsp</h4>
                                     <div>
                                         <p>Golfgis.com was developed to help golf courses manage sustainably, reduce waste, improve ecological diversity and help drive business. Golfgis uses GeoNode to help improve data exchange within the golf industry to provide accurate, up-to-date data that in the end support making better decisions.
                                            
@@ -373,7 +373,7 @@
                             </div>
                         </div>
                          <div class="span5">
-                        <a href= "http://www.golfgis.com"><img src="../static/img/golf.png" width="325" height="225" alt="golf" class="feature-img" /></a>
+                        <a href= "http://www.golfgis.com"><img src="../static/img/golf.png" width="325" height="225" alt="golf" class="feature-img thumbnail" /></a>
                     </div>
                 </div>
             </div>
@@ -382,17 +382,17 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="../static/img/bolivia.png" width="325" height="178" alt="bolivia" class="feature-img" />
+                        <img src="../static/img/bolivia.png" width="325" height="178" alt="bolivia" class="feature-img thumbnail" />
                     </div>
                          <div class="span7 number thirteen">
                              <div class="highlighted-box">
                                 <h2>Bolivia Geonode</strong></h2>
-                                <h4></h4>
+                                <h4>&nbsp</h4>
                                     <div>
                                         <p>
                                         Bolivia is using GeoNode to develop a Geographical Data Infrastructure for the National Information System for Risk Reduction, composed by science and specialised sectors in the areas of; Risk management, Geological Survey, National Statistics, Military Geographical Institute, Heath, Land, Water and education sectors. Each sector will have an instance of GeoNode, and all the be federated in one system  orchestrated by the Civil Defence Office. A few examples of Bolivia's instances are below:
 
-                                        <ul>
+                                        <ul class="unstyled">
                                             <li><a href= "http://geosinager.defensacivil.gob.bo/">http://geosinager.defensacivil.gob.bo/</a></li>
                                             <li><a href= "http://georiesgos.sergeotecmin.gob.bo/">http://georiesgos.sergeotecmin.gob.bo/</a></li>
                                             <li><a href= "http://geonode.igmbolivia.gob.bo/">http://geonode.igmbolivia.gob.bo/</a></li>
@@ -422,7 +422,7 @@
                             </div>
                         </div>
                          <div class="span5">
-                        <a href= "http://www.mapstory.org"><img src="../static/img/mapstory.png" width="325" height="187" alt="mapstory" class="feature-img" /></a>
+                        <a href= "http://www.mapstory.org"><img src="../static/img/mapstory.png" width="325" height="187" alt="mapstory" class="feature-img thumbnail" /></a>
                     </div>
                 </div>
             </div>
@@ -431,7 +431,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href= "http://cigno.ve.ismar.cnr.it/"><img src="../static/img/cigno.png" width="325" height="178" alt="vincent" class="feature-img" /></a>
+                        <a href= "http://cigno.ve.ismar.cnr.it/"><img src="../static/img/cigno.png" width="325" height="178" alt="vincent" class="feature-img thumbnail" /></a>
                     </div>
                          <div class="span7 number fifteen">
                              <div class="highlighted-box">
