styled user features page

--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -2,7 +2,7 @@
 
 {% block title %} User Features — {{ block.super }} {% endblock %}
 
-{% block body_class %}geonode-features{% endblock %}
+{% block body_class %}geonode-features user-features{% endblock %}
 
 {% block content %}
         <section class="banner">
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </section>
-        <section class="feature-details" id="explore">
+        <section class="feature-details feature1" id="explore">
             <div class="container">
                 <div class="row">
                     <div class="span5">
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/noun_project_463.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_463.svg.png" width="220" height="220" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/noun_project_1670.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_1670.svg.png" width="300" height="300" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/noun_project_14947.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_14947.svg.png" width="300" height="300" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
