--- a/user_features.html
+++ b/user_features.html
@@ -21,7 +21,7 @@
         <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 	
     </head>
-    <body class="geonode-features">
+    <body class="geonode-features user-features">
 		
         <header class="main">
             <div class="container">
@@ -99,7 +99,7 @@
                 </div>
             </div>
         </section>
-        <section class="feature-details" id="explore">
+        <section class="feature-details feature1" id="explore">
             <div class="container">
                 <div class="row">
                     <div class="span5">
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/noun_project_463.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_463.svg.png" width="220" height="220" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -162,7 +162,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/noun_project_1670.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_1670.svg.png" width="300" height="300" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
@@ -210,7 +210,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/noun_project_14947.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_14947.svg.png" width="300" height="300" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
