styled dev features page

--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -2,7 +2,7 @@
 
 {% block title %} Developer Features — {{ block.super }} {% endblock %}
 
-{% block body_class %}geonode-features{% endblock %}
+{% block body_class %}geonode-features dev-features{% endblock %}
 
 {% block content %}
         <section class="banner">
@@ -45,7 +45,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/noun_project_8233.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_8233.svg.png" width="400" height="400" alt="Open Source Geospatial" class="feature-img" />
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/noun_project_2174.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_2174.svg.png" width="310" height="310" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/noun_project_3064.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_3064.svg.png" width="280" height="280" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/noun_project_18273.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_18273.svg.png" width="280" height="280" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
