--- a/pages/admin_features.html
+++ b/pages/admin_features.html
@@ -2,7 +2,7 @@
 
 {% block title %} Admin Features — {{ block.super }} {% endblock %}
 
-{% block body_class %}geonode-features{% endblock %}
+{% block body_class %}geonode-features admin-features{% endblock %}
 
 {% block content %}
         <section class="banner">
@@ -27,7 +27,7 @@
         <section class="body">
             <div class="container">
                 <div class="row">
-                    <div class="span10">
+                    <div class="span12">
                         <nav class="subnav">
                             <h5>Administrator Features:</h5>
                             <ul class="unstyled">
@@ -42,11 +42,11 @@
                 </div>
             </div>
         </section>
-        <section class="feature-details" id="ogcsdi">
+        <section class="feature-details feature1" id="ogcsdi">
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/noun_project_9760.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_9760.svg.png" width="320" height="320" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/noun_project_6119.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_6119.svg.png" width="300" height="300" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/noun_project_99.svg.png" width="250" height="250" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_3182.svg.png" width="340" height="340" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/noun_project_17896.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_6853.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/noun_project_18273.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_18273.svg.png" width="290" height="290" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number five">
                         <div class="highlighted-box">
