Update after css updates

--- a/admin_features.html
+++ b/admin_features.html
@@ -21,7 +21,7 @@
         <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 	
     </head>
-    <body class="geonode-features">
+    <body class="geonode-features admin-features">
 		
         <header class="main">
             <div class="container">
@@ -86,7 +86,7 @@
         <section class="body">
             <div class="container">
                 <div class="row">
-                    <div class="span10">
+                    <div class="span12">
                         <nav class="subnav">
                             <h5>Administrator Features:</h5>
                             <ul class="unstyled">
@@ -101,11 +101,11 @@
                 </div>
             </div>
         </section>
-        <section class="feature-details" id="ogcsdi">
+        <section class="feature-details feature1" id="ogcsdi">
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/noun_project_9760.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_9760.svg.png" width="320" height="320" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/noun_project_6119.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_6119.svg.png" width="300" height="300" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -160,7 +160,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/noun_project_99.svg.png" width="250" height="250" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_3182.svg.png" width="340" height="340" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/noun_project_17896.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_6853.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -212,7 +212,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/noun_project_18273.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_18273.svg.png" width="290" height="290" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number five">
                         <div class="highlighted-box">
