--- a/dev_features.html
+++ b/dev_features.html
@@ -21,7 +21,7 @@
         <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 	
     </head>
-    <body class="geonode-features">
+    <body class="geonode-features dev-features">
 		
         <header class="main">
             <div class="container">
@@ -104,7 +104,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/noun_project_8233.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_8233.svg.png" width="400" height="400" alt="Open Source Geospatial" class="feature-img" />
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/noun_project_2174.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_2174.svg.png" width="310" height="310" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
@@ -165,7 +165,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/noun_project_3064.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_3064.svg.png" width="280" height="280" alt="Explore Maps" class="feature-img" />
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
@@ -206,7 +206,7 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/noun_project_18273.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
+                        <img src="static/img/noun_project_18273.svg.png" width="280" height="280" alt="Explore Maps" class="feature-img" />
                     </div>
                 </div>
             </div>
