--- a/explore_discover.html
+++ b/explore_discover.html
@@ -21,7 +21,7 @@
         <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 	
     </head>
-    <body class="geonode-features">
+    <body class="geonode-features user-features">
 		
         <header class="main">
             <div class="container">
