Fixes to the gallery page.

--- a/pages/gallery/index.html
+++ b/pages/gallery/index.html
@@ -139,7 +139,7 @@
                                 <h4>UMI DRRC</h4>
                                     <div>
                                         <p>The University of the West Indies (UWI) Disaster Risk Reduction Centre (DRRC) and the World Bank collaborated on the "Caribbean Risk Atlas" project with the main goal of making spatial data on risk for hurricanes, earthquakes and floods in the Caribbean available on-line. Mona GeoInformatics Institute (MGI) built the "Cariska" web map application for this project on the GeoNode platform.
-                                        Find it online: <a href= "http://cariska.mona.uwi.edu">WFP</a>
+                                        Find it online: <a href= "http://cariska.mona.uwi.edu">Caribbean Risk Atlas</a>
                                         </p>
                                     </div>
                             </div>
@@ -187,7 +187,7 @@
                                             with an enfasis on reducing disasters caused by natural hazards.
                                             The site has been developed by and for INGC, with support from The World Bank, The Global Facility for Disaster Reduction and Recovery (GFDRR)
 
-                                            Find it online: <a href= "http://moz-adapt.org/">WFP</a>
+                                            Find it online: <a href= "http://moz-adapt.org/">Moz Adapt</a>
                                         </p>
                                     </div>
                             </div>
@@ -213,7 +213,7 @@
                                             GeoNode platform. GeoNode is an open source platform for sharing
                                             geospatial data and maps.
 
-                                            Find it online: <a href="http://yemen.rcdrrdri.org">VirtualKenya.org</a>
+                                            Find it online: <a href="http://yemen.rcdrrdri.org">Yemen Data</a>
                                         </p>
                                     </div>
                             </div>
